--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -11,6 +11,11 @@
     <input type="text" name="url">
   </label>
 
+  <label for "tags">
+    Tags:
+    <input type="text" name="tags">
+  </label>
+
   <input type="submit" value="Add link">
 
 </form>
