--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -1,17 +1,17 @@
 <h1> New Link </h1>
 
 <form action="/links" method="post">
-  <label for "title">
+  <label for="title">
     Title:
     <input type="text" name="title">
   </label>
 
-  <label for "url">
+  <label for="url">
     URL:
     <input type="text" name="url">
   </label>
 
-  <label for "tags">
+  <label for="tags">
     Tags:
     <input type="text" name="tags">
   </label>
