--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -2,9 +2,14 @@
 
 <ul id='links'>
   <% @links.each do |link| %>
+
   <li>
     Title: <%= link.title %>
     URL: <%= link.url %>
+    Tag: <% link.tags.each do |tag| %>
+      <%=tag.name%>
+    <% end %>
   </li>
+
   <% end %>
 </ul>
