--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -1,9 +1,10 @@
-<form action='/users' method='post'>
+
+<form action='/user' method='post'>
 
   Email:  <input type='text' name='email' id='email'>
   Password: <input type='password' name='password' id='password'>
   Confirm password: <input type='password' name='password_confirmation' id='password_confirmation'> <%= @error %>
-
+  <%= flash[:error] %>
   <input type='submit' value='Sign up'>
 
 </form>
