Refactor confirm password functionality

--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -1,10 +1,9 @@
 
 <form action='/user' method='post'>
 
-  Email:  <input type='text' name='email' id='email'>
+  Email:  <input type='text' name='email' id='email' value='<%= @user.email %>'>
   Password: <input type='password' name='password' id='password'>
-  Confirm password: <input type='password' name='password_confirmation' id='password_confirmation'> <%= @error %>
-  <%= flash[:error] %>
+  Confirm password: <input type='password' name='password_confirmation' id='password_confirmation'>
   <input type='submit' value='Sign up'>
 
 </form>
